2003-10-13  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c, cong-document.c, cong-error-dialog.h, cong-error-file-open.c, cong-error-file-save.c, cong-error-tests.c, cong-file-open.c, cong-parser-error.c, cong-parser-error.h, cong-plugin.c, cong-plugin.h, cong-vfs.c, cong-vfs.h, plugin-convert-case.c

	Removed lots of GnomeVFS URI objects; replaced with stringified URIs

2003-10-11  Geert Stappers <stappers@stappers.nl>

	* Makefile.am, cong-app.c, cong-file-import.c, cong-menus.c
	and plugin-docbook.
	Use pkgdatadir instead of datadir.

2003-10-10  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-widget3.c, cong-node.c

	Fixes for bug #124011 (entity ref children)

2003-10-09  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-document.c, xmledit.c

	Use the X CLIPBOARD for clipboard handling, rather than an internal buffer

2003-10-08  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-app.c, cong-app.h, cong-dispspec.c, cong-editor-area-entity-decl.c, cong-editor-area-entity-ref.c, cong-editor-area-span-tag.c, cong-editor-area-structural.c, cong-editor-area-unknown-tag.c, cong-editor-node-comment.c, cong-editor-node-text.c, cong-editor-node-unimplemented.c, cong-editor-node.c, cong-file-export.c, cong-file-import.c, cong-file-new.c, cong-file-open.c, cong-menus.c, cong-modification-set-dtd-ptr.c, cong-node-properties-dialog.c, cong-plugin.c, cong-primary-window.c, cong-util.c, main.c, plugin-doc-from-xds.c, plugin-docbook.c, plugin-lists-area-listitem.c, plugin-lists-node-element-listitem.c, popup.c

	Made most of the CongApp data fields private
	
	--- Version 0.7.5 ---		

	* cong-menus.c

	Disabled the debug menus

2003-10-07  David Malcolm <david@davemalcolm.demon.co.uk>
